@@ -1,15 +1,18 @@
 <table cellpadding="4" cellspacing="1" width="98%">
-  <tr>
-    <th>{TITLE} {TITLE_SORT}</th>
-    <th>{SUMMARY}</th>
-    <th>{DATE} {CREATE_DATE_SORT}</th>
-    <th>{ACTION}</th>
+  <tr style="vertical-align : top">
+    <th width="25%">{TITLE_SORT} {TITLE}</th>
+    <th width="30%">{SUMMARY}</th>
+    <th width="25%">{CREATE_DATE_SORT} {CREATION_LABEL}<br />
+        {PUBLISH_DATE_SORT} {PUBLISH_LABEL}<br />
+        {EXPIRE_DATE_SORT} {EXPIRE_LABEL}
+    </th>
+    <th width="20%">{ACTION}</th>
   </tr>
 <!-- BEGIN listrows -->
   <tr {TOGGLE}>
     <td>{TITLE}</td>
     <td>{SUMMARY}</td>
-    <td>{DATE}</td>
+    <td><span class="smaller">{CREATE_DATE}<br />{PUBLISH_DATE}<br />{EXPIRE_DATE}</span></td>
     <td>{ACTION}</td>
   </tr>
 <!-- END listrows -->
